--- a/website/index.html
+++ b/website/index.html
@@ -1,223 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project Heartcode 2023</title>
-        <link rel="icon" href="../assets/heartcode.png" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-            crossorigin="anonymous"
-        />
-        <link href="styles.css" rel="stylesheet" />
-        <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    </head>
 
-    <body>
-        <nav id="navigation-bar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="index.html"
-                    >Project Heartcode</a
-                >
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="index.html"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="flaming.html"
-                                >Flaming</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="harassment.html"
-                                >Harassment</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Quiz</a>
-                        </li>
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                href="sharekindwords.html"
-                                >Share Kind Words</a
-                            >
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                About Us
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="mentees.html"
-                                        >Cayden & Zi Rong</a
-                                    >
-                                </li>
-                                <li>
-                                    <hr class="dropdown-divider" />
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="mentors.html"
-                                        >About the mentors</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
-                        <button
-                            class="btn btn-outline text-white"
-                            type="submit"
-                        >
-                            Search
-                        </button>
-                    </form>
-                </div>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project Heartcode 2023</title>
+    <link rel="icon" href="../assets/heartcode.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <link href="styles.css" rel="stylesheet" />
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+</head>
+
+<body>
+    <nav id="navigation-bar" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="flaming.html">Flaming</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="harassment.html">Harassment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="mentees.html">Cayden & Zi Rong</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="mentors.html">About the mentors</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline text-white" type="submit">
+                        Search
+                    </button>
+                </form>
             </div>
-        </nav>
-        <div
-            class="d-flex justify-content-center align-items"
-            style="margin-top: 100px; margin-bottom: 0px"
-        >
-            <p style="font-size: 40px; text-align: center">
-                Bringing awareness to the issue of cyberbullying and harassment.
-            </p>
-            <lottie-player
-                src="https://lottie.host/2bf26b63-45c5-40ad-ada0-6507ac20c6d6/dCMgHMwPNz.json"
-                background="transparent"
-                speed="1"
-                style="width: 300px; height: 300px"
-                loop
-                autoplay
-            ></lottie-player>
         </div>
+    </nav>
+    <div class="d-flex justify-content-center align-items" style="margin-top: 100px; margin-bottom: 0px">
+        <p id="blinkText" style="font-size: 40px; text-align: center"></p>
+        <lottie-player src="https://lottie.host/2bf26b63-45c5-40ad-ada0-6507ac20c6d6/dCMgHMwPNz.json"
+            background="transparent" speed="1" style="width: 300px; height: 300px" loop autoplay></lottie-player>
+    </div>
 
-        <div
-            class="rounded"
-            style="background-color: #f8a072; margin: 8px; padding: 80px"
-        >
-            <div class="container">
-                <div class="row">
-                    <div
-                        class="card col-12 col-md"
-                        style="width: 400px; height: 300px; margin: 20px"
-                    >
-                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
-                        <div
-                            class="card-body"
-                            style="
+    <div class="rounded" style="background-color: #f8a072; margin: 8px; padding: 80px">
+        <div class="container">
+            <div class="row">
+                <div class="card col-12 col-md" style="width: 400px; height: 300px; margin: 20px">
+                    <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                    <div class="card-body" style="
                                 vertical-align: middle;
                                 display: inline-block;
-                            "
-                        >
-                            <h5 class="card-title pt-3">Cyber Bullying Quiz</h5>
-                            <lottie-player
-                                src="https://lottie.host/b400ece0-ee07-47d0-9443-db9466de21b3/1YdzsCcbDo.json"
-                                background="transparent"
-                                speed="1"
-                                style="width: 100px; height: 100px"
-                                loop
-                                autoplay
-                            ></lottie-player>
-                            <p class="card-text">
-                                Dive into our Cyberbullying Quiz and test your
-                                knowledge on digital ethics and online behavior.
-                            </p>
-                            <a href="quiz.html" class="btn btn-primary"
-                                >Go to our Quiz</a
-                            >
-                        </div>
+                            ">
+                        <h5 class="card-title pt-3">Cyber Bullying Quiz</h5>
+                        <lottie-player src="https://lottie.host/b400ece0-ee07-47d0-9443-db9466de21b3/1YdzsCcbDo.json"
+                            background="transparent" speed="1" style="width: 100px; height: 100px" loop
+                            autoplay></lottie-player>
+                        <p class="card-text">
+                            Dive into our Cyberbullying Quiz and test your
+                            knowledge on digital ethics and online behavior.
+                        </p>
+                        <a href="quiz.html" class="btn btn-primary">Go to our Quiz</a>
                     </div>
-                    <div
-                        class="card col-12 col-md"
-                        style="width: 400px; margin: 20px; height: 300px"
-                    >
-                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
-                        <div class="card-body">
-                            <h5 class="card-title pt-3">
-                                Send an Encouragement Note
-                            </h5>
-                            <lottie-player
-                                src="https://lottie.host/f8743b16-189b-4737-bb05-5e24d409f214/FRqewqYk9i.json"
-                                background="transparent"
-                                speed="1"
-                                style="width: 100px; height: 100px"
-                                loop
-                                autoplay
-                            ></lottie-player>
-                            <p class="card-text">
-                                Send an encouragement note to someone who needs
-                                it!
-                            </p>
-                            <a
-                                href="sharekindwords.html"
-                                class="btn btn-primary"
-                                >Send a message</a
-                            >
-                        </div>
+                </div>
+                <div class="card col-12 col-md" style="width: 400px; margin: 20px; height: 300px">
+                    <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                    <div class="card-body">
+                        <h5 class="card-title pt-3">
+                            Send an Encouragement Note
+                        </h5>
+                        <lottie-player src="https://lottie.host/f8743b16-189b-4737-bb05-5e24d409f214/FRqewqYk9i.json"
+                            background="transparent" speed="1" style="width: 100px; height: 100px" loop
+                            autoplay></lottie-player>
+                        <p class="card-text">
+                            Send an encouragement note to someone who needs
+                            it!
+                        </p>
+                        <a href="sharekindwords.html" class="btn btn-primary">Send a message</a>
                     </div>
-                    <div
-                        class="card col-12 col-md"
-                        style="width: 400px; margin: 20px; height: 300px"
-                    >
-                        <!-- <img src="..." class="card-img-top" alt="..." /> -->
-                        <div class="card-body">
-                            <h5 class="card-title pt-3">
-                                Learn about Cyberbullying
-                            </h5>
-                            <lottie-player
-                                src="https://lottie.host/48b026ee-05fd-433c-9f03-9918c3d65a50/NlFXY13kRk.json"
-                                background="transparent"
-                                speed="1"
-                                style="width: 100px; height: 100px"
-                                loop
-                                autoplay
-                            ></lottie-player>
-                            <p class="card-text">
-                                Learn how to identify cyberbullying and lend a
-                                helping hand to victims
-                            </p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
+                </div>
+                <div class="card col-12 col-md" style="width: 400px; margin: 20px; height: 300px">
+                    <!-- <img src="..." class="card-img-top" alt="..." /> -->
+                    <div class="card-body">
+                        <h5 class="card-title pt-3">
+                            Learn about Cyberbullying
+                        </h5>
+                        <lottie-player src="https://lottie.host/48b026ee-05fd-433c-9f03-9918c3d65a50/NlFXY13kRk.json"
+                            background="transparent" speed="1" style="width: 100px; height: 100px" loop
+                            autoplay></lottie-player>
+                        <p class="card-text">
+                            Learn how to identify cyberbullying and lend a
+                            helping hand to victims
+                        </p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- <div class="d-flex justify-content-center">
+    </div>
+    <!-- <div class="d-flex justify-content-center">
             <div
                 id="carousel-component"
                 class="carousel slide m-4"
@@ -240,10 +149,46 @@
             </div>
         </div> -->
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+    <script>
+        const texts = [
+            "Bringing awareness to the issue of cyberbullying and harassment.",
+        ];
+
+        let index = 0;
+
+        function typeWriter() {
+            const currentText = texts[index];
+            let textIndex = 0;
+
+            function type() {
+                if (textIndex < currentText.length) {
+                    document.getElementById("blinkText").innerHTML += currentText.charAt(textIndex);
+                    textIndex++;
+                    setTimeout(type, 100); 
+                } else {
+                    setTimeout(eraseText, 1000); 
+                }
+            }
+
+            function eraseText() {
+                if (document.getElementById("blinkText").innerHTML !== '') {
+                    let currentContent = document.getElementById("blinkText").innerHTML;
+                    document.getElementById("blinkText").innerHTML = currentContent.slice(0, -1);
+                    setTimeout(eraseText, 50); 
+                } else {
+                    index = (index + 1) % texts.length;
+                    setTimeout(typeWriter, 1000); 
+                }
+            }
+
+            type();
+        }
+
+        typeWriter();
+    </script>
+</body>
+
 </html>
